# icf

./: .gitignore  README.md  pyproject.toml  requirements.txt  run-tests.sh
.devcontainer/: devcontainer.json
.github/workflows/: gh-pages.yml  pages.yml  py_test.yml  test.yml
cli/: README.md  icf.py  icfcli.py
doc/: SPEC-ICF.md
docs/: 01_Types_TLV_définis_(v1).rst  01_spec_icf.md  02_Types_de_badges_et_sécurité.rst  02_registry.md  03_Gouvernance_&_attribution_des_tags.rst  03_governance.md  04_Objectif.rst  05_Format_TLV_général.rst  06_Convention_de_codage.rst  07_Détail_des_champs_TLV.rst  08_Profils_ICF.rst  09_Profils_de_lecteurs_(interop).rst  10_ICF_sur_NDEF.rst  11_Mécanisme_de_vérification_(lecteur).rst  12_Fonctionnement_de_la_signature_(Ed25519).rst  13_Espace_utilisé_sur_NTAG215_(504_octets_max).rst  14_Outils_recommandés.rst  15_Modes_de_lecture.rst  16_Sécurité_cryptographique_et_gestion_des_clés.rst  17_Évolutivité_et_versioning.rst  18_Conclusion.rst  19_Références_&_Crédits.rst  20___Auteur_&_éditeur__.rst  21___Licence_de_la_spécification__.rst  22___Références_techniques__.rst  COPYRIGHT.rst  GOVERNANCE.rst  SPEC-ICF.md  about.rst  conf.py  index.md  index.rst  registry.md  registry.rst  resources.rst
icf/: __init__.py
tests/: test_icf.py
wiki/: 01_Types_TLV_définis_(v1).md  02_Types_de_badges_et_sécurité.md  04_Objectif.md  09_Profils_de_lecteurs_(interop).md  11_Mécanisme_de_vérification_(lecteur).md  17_Évolutivité_et_versioning.md  21___Licence_de_la_spécification__.md  22___Références_techniques__.md  GOVERNANCE.md  Home.md
(+159 files in other folders)
